[gd_scene load_steps=2 format=3 uid="uid://deo2qtohqptx6"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1_menu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.02, 0.02, 0.08, 1)

[node name="Stars" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Star1" type="ColorRect" parent="Stars"]
layout_mode = 0
offset_left = 100.0
offset_top = 80.0
offset_right = 103.0
offset_bottom = 83.0
color = Color(1, 1, 1, 0.8)

[node name="Star2" type="ColorRect" parent="Stars"]
layout_mode = 0
offset_left = 250.0
offset_top = 150.0
offset_right = 252.0
offset_bottom = 152.0
color = Color(1, 1, 1, 0.6)

[node name="Star3" type="ColorRect" parent="Stars"]
layout_mode = 0
offset_left = 400.0
offset_top = 50.0
offset_right = 404.0
offset_bottom = 54.0
color = Color(0.8, 0.9, 1, 0.9)

[node name="Star4" type="ColorRect" parent="Stars"]
layout_mode = 0
offset_left = 550.0
offset_top = 200.0
offset_right = 552.0
offset_bottom = 202.0
color = Color(1, 1, 0.9, 0.7)

[node name="Star5" type="ColorRect" parent="Stars"]
layout_mode = 0
offset_left = 700.0
offset_top = 100.0
offset_right = 703.0
offset_bottom = 103.0
color = Color(1, 1, 1, 0.8)

[node name="Star6" type="ColorRect" parent="Stars"]
layout_mode = 0
offset_left = 150.0
offset_top = 300.0
offset_right = 152.0
offset_bottom = 302.0
color = Color(0.9, 0.95, 1, 0.6)

[node name="Star7" type="ColorRect" parent="Stars"]
layout_mode = 0
offset_left = 600.0
offset_top = 350.0
offset_right = 604.0
offset_bottom = 354.0
color = Color(1, 0.95, 0.9, 0.8)

[node name="Star8" type="ColorRect" parent="Stars"]
layout_mode = 0
offset_left = 300.0
offset_top = 400.0
offset_right = 302.0
offset_bottom = 402.0
color = Color(1, 1, 1, 0.5)

[node name="Star9" type="ColorRect" parent="Stars"]
layout_mode = 0
offset_left = 750.0
offset_top = 280.0
offset_right = 752.0
offset_bottom = 282.0
color = Color(0.85, 0.9, 1, 0.7)

[node name="Star10" type="ColorRect" parent="Stars"]
layout_mode = 0
offset_left = 50.0
offset_top = 450.0
offset_right = 53.0
offset_bottom = 453.0
color = Color(1, 1, 1, 0.6)

[node name="TitleContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 100.0
offset_right = 300.0
offset_bottom = 220.0
grow_horizontal = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.4, 1)
theme_override_font_sizes/font_size = 64
text = "CARGO ESCAPE"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.75, 0.8, 1)
theme_override_font_sizes/font_size = 20
text = "Intercept. Board. Loot. Escape."
horizontal_alignment = 1

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 50.0
offset_right = 100.0
offset_bottom = 170.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="StartButton" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "START GAME"

[node name="AccessibilityButton" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "ACCESSIBILITY"

[node name="QuitButton" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "QUIT"

[node name="Footer" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.5, 0.5, 0.55, 1)
theme_override_font_sizes/font_size = 14
text = "Press ENTER to Start"
horizontal_alignment = 1
